test JVM GC